# la-xpath

./: .gitattributes  README.md  pyproject.toml
la_xpath/: __init__.py  build.py  finder.py  tag.py  text.py
tests/: test.py  test_template.py  test_website_example.py  test_website_rihappy.py
tests/res/: rihappy.html  template.html
